# poc-gen

./: .gitignore  README.md  langgraphflow.py  main.py  prompts.py  pyproject.toml  speaker_diarizer.py  test.py  test_marketability_analyzer.py  test_monetization_factory.py
src/: __init__.py
src/agents/: __init__.py  orchestrator.py
src/core/: __init__.py  llm_factory.py
src/mcp_server/: __init__.py  server.py
src/modules/: __init__.py  marketability_analyzer.py  monetization_analyzer.py  poc_generator.py  report_generator.py  summarization.py  transcription.py  video_processor.py
